Name:                cryptonite-openssl
Version:             0.0
Synopsis:            Crypto stuff using OpenSSL cryptographic library
Description:         cryptography
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Cryptography
Stability:           experimental
Build-Type:          Simple
Homepage:            https://github.com/vincenthz/cryptonite-openssl
Bug-reports:         https://github.com/vincenthz/cryptonite-openssl/issues
Cabal-Version:       >=1.10
extra-doc-files:     README.md

source-repository head
  type: git
  location: https://github.com/vincenthz/cryptonite-openssl

Library
  Exposed-modules:   Crypto.OpenSSL.ECC
                     Crypto.OpenSSL.AES
  Other-modules:
  Build-depends:     base >= 4.3 && < 5
                   , bytestring
  ghc-options:       -Wall -fwarn-tabs -optc-O3
  default-language:  Haskell2010

Test-Suite test-cryptonite-openssl
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  Main-is:           Tests.hs
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , tasty
                   , tasty-quickcheck
                   , tasty-hunit
                   , tasty-kat
                   , cryptonite
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures -rtsopts
  default-language:  Haskell2010
